after preferred name

--- a/sans-condensed/bold/_index.scss
+++ b/sans-condensed/bold/_index.scss
@@ -3,8 +3,8 @@ $font-prefix: '..' !default;
   font-family: 'IBM Plex Sans Condensed';
   font-style: normal;
   font-weight: 700;
-  src: local('IBM Plex Sans Condensed Bold'),
-    local('IBMPlexSansCondensed-Bold'),
+  src: local('IBM Plex Sans Cond Bold'),
+    local('IBMPlexSansCond-Bold'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff2/IBMPlexSansCondensed-Bold.woff2') format('woff2'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff/IBMPlexSansCondensed-Bold.woff') format('woff');
 }
