--- a/sans-condensed/italic/_index.scss
+++ b/sans-condensed/italic/_index.scss
@@ -3,8 +3,8 @@ $font-prefix: '..' !default;
   font-family: 'IBM Plex Sans Condensed';
   font-style: italic;
   font-weight: 400;
-  src: local('IBM Plex Sans Condensed Italic'),
-    local('IBMPlexSansCondensed-Italic'),
+  src: local('IBM Plex Sans Cond Italic'),
+    local('IBMPlexSansCond-Italic'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff2/IBMPlexSansCondensed-Italic.woff2') format('woff2'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff/IBMPlexSansCondensed-Italic.woff') format('woff');
 }
