--- a/sans-condensed/extralight/_latin3.scss
+++ b/sans-condensed/extralight/_latin3.scss
@@ -2,8 +2,8 @@
   font-family: 'IBM Plex Sans Condensed';
   font-style: normal;
   font-weight: 200;
-  src: local('IBM Plex Sans Condensed ExtraLight'),
-    local('IBMPlexSansCondensed-ExtraLight'),
+  src: local('IBM Plex Sans Cond ExtraLight'),
+    local('IBMPlexSansCond-ExtraLight'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/split/woff2/IBMPlexSansCondensed-ExtraLight-Latin3.woff2') format('woff2');
     unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
