--- a/sans-condensed/extralight/italic/_index.scss
+++ b/sans-condensed/extralight/italic/_index.scss
@@ -3,8 +3,8 @@ $font-prefix: '..' !default;
   font-family: 'IBM Plex Sans Condensed';
   font-style: italic;
   font-weight: 200;
-  src: local('IBM Plex Sans Condensed ExtraLight Italic'),
-    local('IBMPlexSansCondensed-ExtraLightItalic'),
+  src: local('IBM Plex Sans Cond ExtraLight Italic'),
+    local('IBMPlexSansCond-ExtraLightItalic'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff2/IBMPlexSansCondensed-ExtraLightItalic.woff2') format('woff2'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff/IBMPlexSansCondensed-ExtraLightItalic.woff') format('woff');
 }
