--- a/sans-condensed/light/_index.scss
+++ b/sans-condensed/light/_index.scss
@@ -3,8 +3,8 @@ $font-prefix: '..' !default;
   font-family: 'IBM Plex Sans Condensed';
   font-style: normal;
   font-weight: 300;
-  src: local('IBM Plex Sans Condensed Light'),
-    local('IBMPlexSansCondensed-Light'),
+  src: local('IBM Plex Sans Cond Light'),
+    local('IBMPlexSansCond-Light'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff2/IBMPlexSansCondensed-Light.woff2') format('woff2'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff/IBMPlexSansCondensed-Light.woff') format('woff');
 }
