--- a/sans-condensed/light/_latin3.scss
+++ b/sans-condensed/light/_latin3.scss
@@ -2,8 +2,8 @@
   font-family: 'IBM Plex Sans Condensed';
   font-style: normal;
   font-weight: 300;
-  src: local('IBM Plex Sans Condensed Light'),
-    local('IBMPlexSansCondensed-Light'),
+  src: local('IBM Plex Sans Cond Light'),
+    local('IBMPlexSansCond-Light'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/split/woff2/IBMPlexSansCondensed-Light-Latin3.woff2') format('woff2');
     unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
