--- a/sans-condensed/medium/_index.scss
+++ b/sans-condensed/medium/_index.scss
@@ -3,8 +3,8 @@ $font-prefix: '..' !default;
   font-family: 'IBM Plex Sans Condensed';
   font-style: normal;
   font-weight: 500;
-  src: local('IBM Plex Sans Condensed Medium'),
-    local('IBMPlexSansCondensed-Medium'),
+  src: local('IBM Plex Sans Cond Medium'),
+    local('IBMPlexSansCond-Medium'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff2/IBMPlexSansCondensed-Medium.woff2') format('woff2'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff/IBMPlexSansCondensed-Medium.woff') format('woff');
 }
