--- a/sans-condensed/medium/italic/_latin3.scss
+++ b/sans-condensed/medium/italic/_latin3.scss
@@ -2,8 +2,8 @@
   font-family: 'IBM Plex Sans Condensed';
   font-style: italic;
   font-weight: 500;
-  src: local('IBM Plex Sans Condensed Medium Italic'),
-    local('IBMPlexSansCondensed-MediumItalic'),
+  src: local('IBM Plex Sans Cond Medium Italic'),
+    local('IBMPlexSansCond-MediumItalic'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/split/woff2/IBMPlexSansCondensed-MediumItalic-Latin3.woff2') format('woff2');
     unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
 }
