--- a/sans-condensed/semibold/italic/_index.scss
+++ b/sans-condensed/semibold/italic/_index.scss
@@ -3,8 +3,8 @@ $font-prefix: '..' !default;
   font-family: 'IBM Plex Sans Condensed';
   font-style: italic;
   font-weight: 600;
-  src: local('IBM Plex Sans Condensed SemiBold Italic'),
-    local('IBMPlexSansCondensed-SemiBoldItalic'),
+  src: local('IBM Plex Sans Cond SemiBold Italic'),
+    local('IBMPlexSansCond-SemiBoldItalic'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff2/IBMPlexSansCondensed-SemiBoldItalic.woff2') format('woff2'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff/IBMPlexSansCondensed-SemiBoldItalic.woff') format('woff');
 }
