--- a/sans-condensed/thin/italic/_index.scss
+++ b/sans-condensed/thin/italic/_index.scss
@@ -3,8 +3,8 @@ $font-prefix: '..' !default;
   font-family: 'IBM Plex Sans Condensed';
   font-style: italic;
   font-weight: 100;
-  src: local('IBM Plex Sans Condensed Thin Italic'),
-    local('IBMPlexSansCondensed-ThinItalic'),
+  src: local('IBM Plex Sans Cond Thin Italic'),
+    local('IBMPlexSansCond-ThinItalic'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff2/IBMPlexSansCondensed-ThinItalic.woff2') format('woff2'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff/IBMPlexSansCondensed-ThinItalic.woff') format('woff');
 }
