--- a/sans-condensed/extralight/_index.scss
+++ b/sans-condensed/extralight/_index.scss
@@ -3,8 +3,8 @@ $font-prefix: '..' !default;
   font-family: 'IBM Plex Sans Condensed';
   font-style: normal;
   font-weight: 200;
-  src: local('IBM Plex Sans Condensed ExtraLight'),
-    local('IBMPlexSansCondensed-ExtraLight'),
+  src: local('IBM Plex Sans Cond Extlt'),
+    local('IBMPlexSansCond-Extlt'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff2/IBMPlexSansCondensed-ExtraLight.woff2') format('woff2'),
     url('#{$font-prefix}/IBM-Plex-Sans-Condensed/fonts/complete/woff/IBMPlexSansCondensed-ExtraLight.woff') format('woff');
 }
